# QT-Chat

./: README.md
chatd/: CMakeLists.txt
chatd/src/: TmplBased.h  database.cpp  database.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  messageform.cpp  messageform.h  messageform.ui  msgbased.cpp  msgbased.h  net.cpp  net.h  permsgform.cpp  permsgform.h  permsgform.ui  settings.cpp  settings.h  sha256d.cpp  sha256d.h  user.h  userform.cpp  userform.h  userform.ui  usrbased.cpp  usrbased.h
clientv2/: CMakeLists.txt
clientv2/src/: TmplBase.h  chatview.cpp  chatview.h  chatview.ui  chatviewlistform.cpp  chatviewlistform.h  chatviewlistform.ui  functions.cpp  functions.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  messagebase.cpp  messagebase.h  messageform.cpp  messageform.h  messageform.ui  permsgform.cpp  permsgform.h  permsgform.ui  qnet.cpp  qnet.h  registrationform.cpp  registrationform.h  registrationform.ui  sha256.cpp  sha256.h  startscreen.cpp  startscreen.h  startscreen.ui  user.cpp  user.h  userform.cpp  userform.h  (+3 more)
